--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <div class = "container">
 
     <center><h1>First Bootstrap Website </h1></center>
+    <nav class="navbar navbar-expand-sm bg-light">
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">page 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">page 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">page 3</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <!--First part-->
     <div class = "row">
         <div class="col-sm-3 p-3 bg-primary text-white">first</div>
@@ -50,7 +65,26 @@
     <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
       <span class="carousel-control-next-icon"></span>
     </button>
+  </div> 
+  <div class = "row">
+  <div class="card" style="width:400px">
+    <img class="card-img-top" src="person.jpg" alt="Card image">
+    <div class="card-body">
+      <h4 class="card-title">John Doe</h4>
+      <p class="card-text">Some example text.</p>
+      <a href="#" class="btn btn-primary">See Profile</a>
+    </div>
   </div>
+  <div class="card" style="width:400px">
+    <img class="card-img-top" src="person1.png" alt="Card image">
+    <div class="card-body">
+      <h4 class="card-title">John Doe</h4>
+      <p class="card-text">Some example text.</p>
+      <a href="#" class="btn btn-primary">See Profile</a>
+    </div>
+  </div>
+</div>
+    
 
 
 </div>
